# Polymers

./: .gitignore  .readthedocs.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  Manifest.toml  Project.toml  README.md  SECURITY.md  _config.yml  build_tarballs.jl  conftest.py  environment.yml  example.py  index.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: binder.yml  build-wheels.sh  build_tarballs.jl  checks.yml  codeql.yml  conda.yml  crates-io.yml  docker-latest.yml  docker-versioned.yml  docker.yml  general.yml  julia.yml  pages.yml  python.yml  rust-dev.yml  rust.yml  test.yml  tests.yml  version.yml
binder/: environment.yml
conda/: README.md  bld.sh  meta.yaml
data/data_1/: frc_8_links_30_angle_1e3_bins_1e9_samples_1.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_10.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_11.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_12.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_13.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_14.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_15.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_16.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_17.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_18.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_19.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_2.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_20.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_21.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_22.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_23.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_24.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_25.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_26.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_27.csv  frc_8_links_30_angle_1e3_bins_1e9_samples_28.csv  (+14 more)
docs/: example_notebook.ipynb  make.jl  requirements.txt
examples/: efrc.rs  frc.rs  frc_single.rs  temporary.rs
pages/: Gemfile  _config.yml  contributors.md  index.md
python/: README.rst  setup.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/src/constitutive/: mod.rs  tests.rs
rust/src/constitutive/hyperelastic/: mod.rs
rust/src/constitutive/hyperelastic/neo_hookean/: mod.rs  test.rs
rust/src/math/: mod.rs  test.rs
rust/src/physics/: mod.rs
rust/src/physics/single_chain/: mod.rs  test.rs  test_macros.rs
rust/src/physics/single_chain/efjc/: mod.rs  test.rs
rust/src/physics/single_chain/efjc/thermodynamics/: mod.rs  test.rs
rust/src/physics/single_chain/efjc/thermodynamics/isotensional/: mod.rs  test.rs
rust/src/physics/single_chain/efjc/thermodynamics/isotensional/asymptotic/: mod.rs  test.rs
rust/src/physics/single_chain/efjc/thermodynamics/isotensional/asymptotic/alternative/: mod.rs  test.rs
rust/src/physics/single_chain/efjc/thermodynamics/isotensional/asymptotic/alternative/legendre/: mod.rs  test.rs
rust/src/physics/single_chain/efjc/thermodynamics/isotensional/asymptotic/legendre/: mod.rs  test.rs
rust/src/physics/single_chain/efjc/thermodynamics/isotensional/asymptotic/reduced/: mod.rs  test.rs
rust/src/physics/single_chain/efjc/thermodynamics/isotensional/asymptotic/reduced/legendre/: mod.rs
rust/src/physics/single_chain/efjc/thermodynamics/isotensional/legendre/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/: mod.rs  py.rs  test.rs
rust/src/physics/single_chain/fjc/mechanics/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/isometric/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/isometric/legendre/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/isotensional/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/isotensional/legendre/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/modified_canonical/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/modified_canonical/asymptotic/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/modified_canonical/asymptotic/strong_potential/: mod.rs  test.rs
rust/src/physics/single_chain/fjc/thermodynamics/modified_canonical/asymptotic/weak_potential/: mod.rs  test.rs
rust/src/physics/single_chain/ideal/: mod.rs  test.rs
rust/src/physics/single_chain/ideal/thermodynamics/: mod.rs  test.rs
rust/src/physics/single_chain/ideal/thermodynamics/isometric/: mod.rs  test.rs
rust/src/physics/single_chain/ideal/thermodynamics/isotensional/: mod.rs  test.rs
rust/src/physics/single_chain/swfjc/: mod.rs  test.rs
rust/src/physics/single_chain/swfjc/mechanics/: mod.rs  test.rs
rust/src/physics/single_chain/swfjc/thermodynamics/: mod.rs  test.rs
rust/src/physics/single_chain/swfjc/thermodynamics/isometric/: mod.rs
rust/src/physics/single_chain/swfjc/thermodynamics/isometric/legendre/: mod.rs
rust/src/physics/single_chain/swfjc/thermodynamics/isotensional/: mod.rs  test.rs
rust/src/physics/single_chain/swfjc/thermodynamics/isotensional/legendre/: mod.rs  test.rs
rust/tests/: sample.rs
src/: Polymers.jl  functions.jl  lib.rs  main.rs  py.rs
test/: runtests.jl
tests/: efjc.rs  efrc.rs  fjc.rs  frc.rs
(+2103 files in other folders)
