[package]
description = "Polymers Modeling Library"
edition = "2021"
keywords = ["julia", "polymers", "python", "rust"]
license = "BSD-3-Clause"
name = "polymers"
version = "0.3.8"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
extern = []
python = ["dep:numpy", "dep:pyo3"]

[dependencies]
numpy = {version = "0.19", optional = true}
pyo3 = {version = "0.19", features = ["extension-module"], optional = true}

[dev-dependencies]
rand = "0.8.5"

