[package]
description = "Polymers Modeling Library"
edition = "2021"
keywords = ["julia", "polymers", "python", "rust"]
license = "BSD-3-Clause"
name = "polymers"
version = "0.3.8"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
extern = []
python = ["dep:numpy", "dep:pyo3"]

[dependencies]
numpy = {version = "=0.19", optional = true}
pyo3 = {version = "=0.26", features = ["extension-module"], optional = true}
rand = "=0.9.2"
rand_distr = "=0.4.3"

[profile.release]
codegen-units = 1
lto = false