[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
# bindings = "cffi"
compatibility = "linux"

[project]
name = "polymers"
requires-python = ">=3.7"
dependencies = ["cffi", "maturin"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
