[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "polymers"
description = "Polymers Modeling Library"
authors = [
  {email = "mrbuche@sandia.gov"},
  {name = "Michael R. Buche"}
]
requires-python = ">=3.7"
dependencies = ["cffi", "maturin"]
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Rust',
    'Programming Language :: Python',
]

[project.urls]
Documentation = "https://polymers.readthedocs.io"
Homepage = "https://sandialabs.github.io/Polymers"
Repository = "https://github.com/sandialabs/polymers"
