[build-system]
requires = ["maturin==1.7.0"]
build-backend = "maturin"

[project]
name = "polymers"
description = "Polymers Modeling Library"
authors = [
  {email = "mrbuche@sandia.gov"},
  {name = "Michael R. Buche"}
]
requires-python = ">=3.8,<3.13"
dependencies = [
  "cffi==1.17.1",
  "maturin==1.7.0",
  "numpy"
]
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python',
    'Programming Language :: Rust',
]

[project.urls]
Documentation = "https://polymers.readthedocs.io"
Homepage = "https://sandialabs.github.io/Polymers"
Repository = "https://github.com/sandialabs/polymers"

[tool.pytest.ini_options]
python_files = ["test.py"]
testpaths = ["src"]

[tool.pylint.'MESSAGES CONTROL']
disable = """
    cell-var-from-loop,
    duplicate-code,
    no-name-in-module,
    too-many-instance-attributes,
    too-many-lines,
    too-many-locals,
    too-many-public-methods
"""
