[package]
name = "polymers"
version = "0.1.0"
edition = "2021"
description = "Polymers Modeling Library"

[dependencies]
ndarray = { version = "0.15.4", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "static"] }
ndarray-linalg = { version = "0.14.1", features = ["openblas-static"] }
lazy_static = "1.4.0"
rand = "0.8.5"
ndarray-rand = "0.14.0"