[package]
name = "polymers"
version = "0.0.0"
edition = "2021"
description = "Polymers Modeling Library"
license = "BSD-3-Clause"
keywords = ["python", "rust", "polymers"]

[dependencies]
ndarray = { version = "0.15.4", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "static"] }
rand = "0.8.5"
ndarray-rand = "0.14.0"
